--- a/insights_rocket.ipynb
+++ b/insights_rocket.ipynb
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('~/repos/zero_ao_ds/kc_house_data.csv')"
+    "# Extraindo os dados\n",
+    "data = pd.read_csv('kc_house_data.csv')"
    ]
   },
   {
@@ -254,6 +255,7 @@
     }
    ],
    "source": [
+    "# Visão geral dos dados\n",
     "data.head()"
    ]
   },
@@ -358,10 +360,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Changing column date to datetime\n",
+    "# Transformando a coluna date no tipo datetime\n",
     "data['date'] = pd.to_datetime(data['date']).dt.date\n",
     "\n",
-    "# Supress scientific notation\n",
+    "# Suprimindo notação científica\n",
     "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
@@ -382,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selecting only numerical columns\n",
+    "# Selecionando somente colunas númericas\n",
     "num_attributes = data.select_dtypes(include=['int64', 'float64'])"
    ]
   },
@@ -393,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Disperion measures \n",
+    "# Medidas de dispersão\n",
     "media = pd.DataFrame(num_attributes.apply(np.mean))\n",
     "mediana = pd.DataFrame(num_attributes.apply(np.median))\n",
     "max_ = pd.DataFrame(num_attributes.apply(np.max))\n",
@@ -881,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "7ec0d972-95f2-4dad-a3fe-01d66338d1ee",
    "metadata": {},
    "outputs": [],
@@ -913,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "ec92f7ed-c638-4b1c-999a-9870a2eb685b",
    "metadata": {},
    "outputs": [],
@@ -959,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "id": "b843dd89-9d30-44e3-b874-7140dfbe3956",
    "metadata": {},
    "outputs": [
@@ -969,7 +971,7 @@
        "71771.19511554623"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "84c3fba9-9f8a-4ccb-b313-087a215340fb",
    "metadata": {},
    "outputs": [
@@ -992,7 +994,7 @@
        "273304711.00000006"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,6 +1004,14 @@
     "revenue = df2['revenue'].sum()\n",
     "revenue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "199e4e39-3388-483f-8c36-1096a04faa84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
